Completed styling with responsive design (used 800px) to fix some issues on tablet devices. Loaded in Google Fonts and linked to Github and portfolio page.

--- a/less/index.less
+++ b/less/index.less
@@ -1,8 +1,14 @@
+@import url("https://fonts.googleapis.com/css?family=Chilanka|Manjari&display=swap");
+
 @background-color: #f3f7f0;
 @text-color: #151e3f;
 @heading-color: #19323c;
 @link-color: #030027;
 @icon-color: #e54b4b;
+@tablet-screen: 800px;
+
+@body-font: "Manjari", sans-serif;
+@header-font: "Chilanka", cursive;
 
 .flex-center() {
   display: flex;
@@ -21,6 +27,10 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  font-family: @body-font;
+}
+
 h1,
 h2,
 h3,
@@ -28,6 +38,7 @@ h4,
 h5,
 h6 {
   color: @heading-color;
+  font-family: @header-font;
 }
 
 h1 {
@@ -79,11 +90,23 @@ header {
   text-align: center;
   height: 80vh;
 
+  @media screen and (max-width: @tablet-screen) {
+    flex-direction: column;
+    margin: 3% 0;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+  }
+
   .hero-image-container {
     width: 60%;
     padding: 2%;
     .flex-center();
     align-items: center;
+
+    @media screen and (max-width: @tablet-screen) {
+      width: 90%;
+    }
 
     h1 {
       font-size: 3rem;
@@ -101,6 +124,14 @@ header {
     .flex-center();
     flex-direction: column;
     justify-content: space-evenly;
+
+    @media screen and (max-width: @tablet-screen) {
+      width: 90%;
+
+      h2 {
+        padding: 2% 0;
+      }
+    }
 
     button {
       padding: 5% 2%;
@@ -124,10 +155,21 @@ header {
   height: 45vh;
   align-items: center;
 
+  @media screen and (max-width: @tablet-screen) {
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: auto;
+  }
+
   .text-container {
     width: 50%;
     justify-content: space-between;
     padding: 2%;
+
+    @media screen and (max-width: @tablet-screen) {
+      width: 90%;
+      padding: 2% 0;
+    }
 
     h2 {
       text-align: center;
@@ -151,17 +193,17 @@ header {
 
     .btn-container {
       .flex-center();
-      padding: 2%;
-      justify-content: space-evenly;
+      width: 100%;
+      flex-direction: column;
 
-      button {
+      a button {
         padding: 5% 2%;
         justify-content: space-between;
-        width: 40%;
         font-size: 1.8rem;
         background-color: @text-color;
         color: #fff;
         border-radius: 1rem;
+        width: 100%;
 
         &:hover {
           background-color: lighten(@text-color, 20%);
@@ -180,6 +222,10 @@ header {
   justify-content: center;
   align-items: center;
 
+  @media screen and (max-width: @tablet-screen) {
+    margin-top: 2%;
+  }
+
   .text-container {
     width: 50%;
     justify-content: space-between;
@@ -187,6 +233,10 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media screen and (max-width: @tablet-screen) {
+      width: 90%;
+    }
   }
 
   .form-container {
@@ -206,20 +256,30 @@ header {
       width: 50%;
       resize: vertical;
       padding: 1%;
+
+      @media screen and (max-width: @tablet-screen) {
+        width: 90%;
+      }
     }
 
     textarea {
       min-height: 20vh;
+
+      @media screen and (max-width: @tablet-screen) {
+        min-height: auto;
+      }
     }
 
     .btn-container {
-      width: 20%;
-      margin-top: 2%;
+      .flex-center();
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      margin: 2%;
 
       button {
-        padding: 5% 2%;
+        padding: 2%;
         justify-content: space-between;
-        width: 100%;
         font-size: 1.8rem;
         background-color: @text-color;
         color: #fff;
@@ -237,9 +297,13 @@ header {
 // *********** CONTACT SECTION STYLES **************
 footer {
   .flex-center();
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 
   .text-container {
     font-size: 1.6rem;
     padding: 3%;
+    width: 100%;
   }
 }
